6295 | 31 files | M Protobufs/citadel_gcmessages_client.proto,  M game/bin/win64/panorama_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/bin/win64/scenesystem_strings.txt,  M game/bin/win64/vphysics2_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/gameinfo.gi,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_learn.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_play.xml,  M game/citadel/pak01_dir/panorama/layout/hud_sandbox_tutorial.xml,  M game/citadel/pak01_dir/panorama/styles/citadel_db_page_learn.css,  M game/citadel/pak01_dir/panorama/styles/citadel_db_page_play.css,  M game/citadel/pak01_dir/panorama/styles/citadel_hud_top_bar.css,  M game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_view.css,  M game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_view_favorites.css,  M game/citadel/pak01_dir/panorama/styles/citadel_ui_keyboard_glyph.css,  M game/citadel/pak01_dir
https://steamdb.info/patchnotes/21926218/

--- a/game/citadel/pak01_dir/panorama/layout/citadel_db_page_learn.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_db_page_learn.xml
@@ -31,7 +31,7 @@
 					</Panel>
 				</Panel>
 			</Panel>
-			<Panel id="HeroSandbox" class="playOptionContainer hasTasks" onactivate="CitadelStartSandboxTutorial()">
+			<Panel id="HeroSandbox" class="playOptionContainer hasTasks">
 				<Panel class="cardBorder" />
 				<Panel class="playOptionTop">
 					<Panel class="buttonImage" />
@@ -53,7 +53,7 @@
 					</Panel>
 				</Panel>
 			</Panel>
-			<Panel id="LaneTraining" class="playOptionContainer hasTasks" onactivate="CitadelStartGuidedBotMatch()">
+			<Panel id="LaneTraining" class="playOptionContainer hasTasks" onactivate="CitadelStartTutorial()">
 				<Panel class="cardBorder" />
 				<Panel class="playOptionTop">
 					<Panel class="buttonImage" />
@@ -62,9 +62,9 @@
 				<Panel class="playOptionBottom">
 					<Panel class="bottomOptionContainer">
 						<Panel class="BotsTitle">
-							<Label class="playLabel" text="#menu_play_lane_training" />
-							<Label class="playTime" text="#menu_play_lane_training_time_est" />
-							<Label class="playDesc" text="#menu_play_lane_training_desc" />
+							<Label class="playLabel" text="#Basics_Tutorial_Title" />
+							<Label class="playTime" text="#menu_play_sandbox_time_est" />
+							<Label class="playDesc" text="#Basics_Tutorial_Desc" />
 						</Panel>
 					</Panel>
 				</Panel>
