--- a/game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_view_favorites.css
+++ b/game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_view_favorites.css
@@ -225,7 +225,7 @@ CitadelShopMod
 	visibility: visible;
 }
 
-.connectedToNewPlayerSandbox .new_tag,.connectedToLaneTraining .new_tag
+.connectedToNewPlayerSandbox .new_tag,.connectedToTutorial .new_tag
 {
 	visibility: collapse;
 }
