--- a/game/citadel/pak01_dir/panorama/styles/hud_sandbox_tutorial.css
+++ b/game/citadel/pak01_dir/panorama/styles/hud_sandbox_tutorial.css
@@ -24,7 +24,7 @@
 	visibility: collapse;
 	border-radius: 9px;
 	border: 1px solid rgba(255, 255, 255, 0.025);
-	background-color: gradient( radial, 50% 50%, -5% -5%, 60% 60%, from( #2c2a28 ), to( #181716 ) );
+	background-color: gradient( radial, 50% 50%, -5% -5%, 60% 60%, from( ominousGreen&10 ), to( ominousGreen&20 ) );
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 32px 0px;
 }
 
@@ -58,9 +58,10 @@
 	font-size: 32px;
 	vertical-align: middle;
 	color: offWhite;
-	font-family: block;
+	font-family: oracle;
 	horizontal-align: center;
 	text-align: center;
+	font-weight: bold;
 }
 
 .ReportCardPanel .introHeader Label
@@ -71,10 +72,11 @@
 
 .introText
 {
-	font-size: 16px;
+	font-size: 22px;
 	padding: 12px;
 	text-align: center;
 	horizontal-align: center;
+	font-weight: semi-bold;
 	color: offWhite&88;
 }
 
@@ -97,15 +99,8 @@
 
 #StartButton,#ContinueButton
 {
-	background-color: offWhite&00;
-	box-shadow: inset 0px 0px 32px #00000044;
-	border: 2px solid offWhite&44;
 	horizontal-align: center;
 	margin: 32px 20px 12px 18px;
-	border-radius: 40px;
-	transition-property: brightness, background-color;
-	transition-timing-function: ease-in-out;
-	transition-duration: 0.2s;
 }
 
 #ContinueButton
@@ -113,38 +108,18 @@
 	visibility: collapse;
 }
 
-#StartButton Label,#ContinueButton Label
-{
-	font-size: 20px;
-	font-family: block;
-	font-weight: bold;
-	text-transform: uppercase;
-	padding: 8px 48px;
-	color: offWhite&88;
-}
-
-#StartButton:hover,#ContinueButton:hover
-{
-	background-color: offWhite&11;
-}
-
-#StartButton:hover Label,#ContinueButton:hover Label
-{
-	color: offWhite;
-}
-
 .TutorialTasksContainer
 {
-	width: 320px;
+	width: 360px;
 	horizontal-align: right;
 	margin: 28px;
+	margin-right: 50px;
 	height: fit-children;
 	overflow: noclip;
-	ui-scale: 108%;
-	border-radius: 3px;
+	ui-scale: 120%;
 }
 
-.heroTestingRideZiplineFinished .gShopOpen .TutorialTasksContainer
+.TutorialTask5Finished .gShopOpen .TutorialTasksContainer
 {
 	vertical-align: bottom;
 	height: 200px;
@@ -172,6 +147,7 @@
 	background-color: gradient( radial, 50% 50%, -5% -5%, 60% 60%, from( #2c2a28 ), to( #181716 ) );
 	width: 100%;
 	padding: 12px 12px 10px 12px;
+	visibility: collapse;
 }
 
 .NewPlayerHeader Label
@@ -224,6 +200,28 @@
 	visibility: visible;
 }
 
+#TutorialTask3 .TaskStatus,#TutorialTask4 .TaskStatus
+{
+	horizontal-align: left;
+	margin-top: 20px;
+}
+
+#TutorialTask3 .TaskHeader
+{
+	margin-top: 16px;
+}
+
+#TutorialTask3 .Command,#TutorialTask4 .Command
+{
+	font-size: 22px;
+	font-weight: bold;
+}
+
+#TutorialTask4 .TaskDesc
+{
+	margin-top: 16px;
+}
+
 .completed .TaskStatus
 {
 	background-image: url("s2r://panorama/images/getting_started/checklist_task_complete_png.vtex");
@@ -244,10 +242,12 @@
 	color: offWhite;
 	opacity: 1;
 	vertical-align: top;
+	vertical-align: middle;
 	flow-children: down;
-	background-color: rgba(0, 0, 0, 0.65);
+	background-color: ominousGreen&20;
 	world-blur: ingameHudBlur;
-	padding-bottom: 12px;
+	border-radius: 5px;
+	padding-bottom: 10px;
 }
 
 .NewPlayerTask.FinishedRow
@@ -255,20 +255,16 @@
 	flow-children: down;
 }
 
+.NewPlayerTask .Ability2,.NewPlayerTask .Ability3,.NewPlayerTask .Ability4
+{
+	visibility: collapse;
+}
+
 .TaskText
 {
 	flow-children: down;
-	margin: 10px;
+	margin: 16px 20px 10px 20px;
 	width: 100%;
-}
-
-.footnote
-{
-	color: offWhite&44;
-	text-transform: uppercase;
-	font-weight: medium;
-	font-size: 14px;
-	margin-top: -2px;
 }
 
 .TaskSteps
@@ -282,29 +278,37 @@
 .TaskName
 {
 	vertical-align: middle;
-	font-size: 18px;
+	font-size: 26px;
+	line-height: 28px;
 	horizontal-align: left;
 	vertical-align: middle;
 	font-weight: bold;
-	margin: 5px 0px;
+	font-family: oracle;
+	text-shadow: 2px 2px 0px offBlack&20;
 }
 
 .TaskNumber
 {
-	font-size: 14px;
-	font-style: italic;
-	color: offWhite&70;
-	margin-top: 2px;
-	margin-bottom: -3px;
+	font-size: 18px;
+	font-family: block;
+	color: offWhite&44;
+	font-weight: normal;
 }
 
-.TaskDesc
+.TaskHeader,.TaskDesc
 {
 	vertical-align: middle;
-	font-size: 16px;
-	font-weight: normal;
+	font-size: 18px;
+	font-weight: semi-bold;
+	margin-bottom: 5px;
 	color: offWhite&88;
-	margin-top: 4px;
+	margin-top: 0px;
+	line-height: 28px;
+}
+
+.TaskHeader
+{
+	margin-top: 30px;
 }
 
 @keyframes 'taskComplete'
@@ -314,17 +318,16 @@
 		brightness: 1;
 		ui-scale: 100%;
 		opacity: 1;
-		wash-color: #00FF9900;
-		pre-transform-scale2d: 1;
+		wash-color: offWhite&00;
+		pre-transform-scale2d: 1.05;
 	}
 	
 	50%
 	{
-		transform: translateY(10px);
 		brightness: 2;
 		opacity: 1;
-		wash-color: #00FF99;
-		pre-transform-scale2d: 1.15;
+		wash-color: offWhite;
+		pre-transform-scale2d: 1.25;
 	}
 	
 	100%
@@ -332,8 +335,8 @@
 		brightness: 1;
 		ui-scale: 100%;
 		opacity: 0;
-		wash-color: #00FF9900;
-		pre-transform-scale2d: 1;
+		wash-color: offWhite&00;
+		pre-transform-scale2d: 1.05;
 	}
 	
 }
@@ -361,7 +364,7 @@
 	
 }
 
-#TutorialTask1,#TutorialTask2A,#TutorialTask2,#TutorialTask3,#TutorialTask4,#TutorialTask5,#TutorialTask6
+#TutorialTask1,#TutorialTask2,#TutorialTask3,#TutorialTask4,#TutorialTask5,#TutorialTask6
 {
 	opacity: 0;
 }
@@ -371,12 +374,12 @@
 	opacity: 1;
 }
 
-.heroTestingMovementFinished #TutorialTask1,.heroTestingMovementFinished #TutorialTask2,.heroTestingMovementFinished #TutorialTask3,.heroTestingMovementFinished #TutorialTask4
+.TutorialTask1Finished #TutorialTask1
 {
 	opacity: 0;
 }
 
-.heroTestingMovementFinished #TutorialTask2A
+.TutorialTask1Finished #TutorialTask2
 {
 	opacity: 1;
 	animation-name: showTask;
@@ -384,12 +387,25 @@
 	animation-iteration-count: 1;
 }
 
-.heroTestingAbilityLearnFinished #TutorialTask1,.heroTestingAbilityLearnFinished #TutorialTask2A,.heroTestingAbilityLearnFinished #TutorialTask3,.heroTestingAbilityLearnFinished #TutorialTask4
+.TutorialTask2Finished #TutorialTask2
 {
 	opacity: 0;
 }
 
-.heroTestingAbilityLearnFinished #TutorialTask2
+.TutorialTask2Finished #TutorialTask3
+{
+	opacity: 1;
+	animation-name: showTask;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+}
+
+.TutorialTask3Finished #TutorialTask3
+{
+	opacity: 0;
+}
+
+.TutorialTask3Finished #TutorialTask4
 {
 	opacity: 1;
 	animation-name: showTask;
@@ -397,12 +413,12 @@
 	animation-iteration-count: 1;
 }
 
-.heroTestingAbilityPurchasedFinished #TutorialTask1,.heroTestingAbilityPurchasedFinished #TutorialTask2A,.heroTestingAbilityPurchasedFinished #TutorialTask2,.heroTestingAbilityPurchasedFinished #TutorialTask4
+.TutorialTask4Finished #TutorialTask4
 {
 	opacity: 0;
 }
 
-.heroTestingAbilityPurchasedFinished #TutorialTask3
+.TutorialTask4Finished #TutorialTask5
 {
 	opacity: 1;
 	animation-name: showTask;
@@ -410,12 +426,12 @@
 	animation-iteration-count: 1;
 }
 
-.heroTestingAbilityUpgradeFinished #TutorialTask1,.heroTestingAbilityUpgradeFinished #TutorialTask2A,.heroTestingAbilityUpgradeFinished #TutorialTask2,.heroTestingAbilityUpgradeFinished #TutorialTask3
+.TutorialTask5Finished #TutorialTask5
 {
 	opacity: 0;
 }
 
-.heroTestingAbilityUpgradeFinished #TutorialTask4
+.TutorialTask5Finished #TutorialTask6
 {
 	opacity: 1;
 	animation-name: showTask;
@@ -423,12 +439,12 @@
 	animation-iteration-count: 1;
 }
 
-.heroTestingRideZiplineFinished #TutorialTask4
+.TutorialTask6Finished #TutorialTask6
 {
 	opacity: 0;
 }
 
-.heroTestingRideZiplineFinished #TutorialTask5
+.TutorialTask6Finished #TutorialTask7
 {
 	opacity: 1;
 	animation-name: showTask;
@@ -436,23 +452,10 @@
 	animation-iteration-count: 1;
 }
 
-.heroTestingModPurchasedFinished #TutorialTask5
-{
-	opacity: 0;
-}
-
-.heroTestingModPurchasedFinished #TutorialTask6
-{
-	opacity: 1;
-	animation-name: showTask;
-	animation-duration: 1.2s;
-	animation-iteration-count: 1;
-}
-
-.heroTestingMovementFinished #TutorialTask1,.heroTestingAbilityLearnFinished #TutorialTask2A,.heroTestingAbilityPurchasedFinished #TutorialTask2,.heroTestingAbilityUpgradeFinished #TutorialTask3,.heroTestingRideZiplineFinished #TutorialTask4,.heroTestingModPurchasedFinished #TutorialTask5
+.TutorialTask1Finished #TutorialTask1,.TutorialTask2Finished #TutorialTask2,.TutorialTask3Finished #TutorialTask3,.TutorialTask4Finished #TutorialTask4,.TutorialTask5Finished #TutorialTask5,.TutorialTask6Finished #TutorialTask6,.TutorialTask7Finished #TutorialTask7,.TutorialTask8Finished #TutorialTask8
 {
 	animation-name: taskComplete;
-	animation-duration: 0.9s;
+	animation-duration: 0.4s;
 	animation-iteration-count: 1;
 }
 
@@ -464,14 +467,21 @@
 	margin: 3px 0px;
 }
 
+.MovementRow Panel
+{
+	vertical-align: center;
+}
+
 .topRow
 {
-	margin-top: 15px;
+	margin-top: 18px;
 }
 
 .KeyboardShortcut
 {
-	font-size: 16px;
+	flow-children: right;
+	font-size: 18px;
+	line-height: 20px;
 	font-weight: bold;
 	padding: 2px 10px 4px 10px;
 	min-width: 105px;
@@ -483,13 +493,27 @@
 	color: offWhite;
 }
 
-.Command
+.CommandPrefix,.Command
 {
-	font-size: 16px;
-	font-weight: bold;
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: normal;
+	font-family: oracle;
 	vertical-align: middle;
-	margin-top: 1px;
 	color: offWhite;
+}
+
+.footnote
+{
+	color: offWhite&44;
+	text-transform: uppercase;
+	font-weight: medium;
+	font-size: 14px;
+}
+
+.CommandPrefix
+{
+	margin-right: 6px;
 }
 
 .InlineGlyph
@@ -518,9 +542,10 @@
 	border-radius: 3px;
 }
 
-#TutorialTask6
+.FeaturedAbility
 {
-	visibility: collapse;
+	flow-children: right;
+	margin: 12px 0px 0px 0px;
 }
 
 .AbilityUse,.AbilityUsed,.AbilityPassive
@@ -557,8 +582,8 @@
 
 .AbilityIcon
 {
-	width: 28px;
-	height: 28px;
+	width: 36px;
+	height: 36px;
 	vertical-align: middle;
 	border-radius: 2px;
 	margin-right: 10px;
@@ -575,5 +600,10 @@
 .sandboxAbility1Use .Ability1 .AbilityUse,.sandboxAbility1Used .Ability1 .AbilityUsed,.sandboxAbility1Passive .Ability1 .AbilityPassive,.sandboxAbility2Use .Ability2 .AbilityUse,.sandboxAbility2Used .Ability2 .AbilityUsed,.sandboxAbility2Passive .Ability2 .AbilityPassive,.sandboxAbility3Use .Ability3 .AbilityUse,.sandboxAbility3Used .Ability3 .AbilityUsed,.sandboxAbility3Passive .Ability3 .AbilityPassive,.sandboxAbility4Use .Ability4 .AbilityUse,.sandboxAbility4Used .Ability4 .AbilityUsed,.sandboxAbility4Passive .Ability4 .AbilityPassive
 {
 	visibility: visible;
+}
+
+#CloseShopTask,#ZoomTask,#SlideTask,#MantleTask
+{
+	visibility: collapse;
 }
 
