--- a/game/citadel/pak01_dir/panorama/styles/team_chat_status.css
+++ b/game/citadel/pak01_dir/panorama/styles/team_chat_status.css
@@ -11,7 +11,7 @@ TeamChatStatus
 	visibility: collapse;
 }
 
-.connectedToHeroTesting TeamChatStatus,.connectedToLaneTraining.connectedToGame TeamChatStatus
+.connectedToTutorial.connectedToGame TeamChatStatus
 {
 	visibility: collapse;
 }
