--- a/game/citadel/pak01_dir/panorama/layout/hud_sandbox_tutorial.xml
+++ b/game/citadel/pak01_dir/panorama/layout/hud_sandbox_tutorial.xml
@@ -18,11 +18,22 @@
 		<Panel class="TutorialTasksContainer" hittest="false" hittestchildren="false">
 			<Panel id="TutorialTask1" class="NewPlayerTask">
 				<Panel class="NewPlayerHeader">
+					<Panel class="NewPlayerIcon" />
 					<Label class="NewPlayerTitle" text="#menu_hero_training" />
 				</Panel>
 				<Panel class="TaskText">
+					<Label class="TaskName" text="#Sandbox_Tutorial_Zipline" />
 					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_1" />
+					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Zipline_desc" />
+				</Panel>
+			</Panel>
+			<Panel id="TutorialTask2" class="NewPlayerTask">
+				<Panel class="NewPlayerHeader">
+					<Label class="NewPlayerTitle" text="#menu_hero_training" />
+				</Panel>
+				<Panel class="TaskText">
 					<Label class="TaskName" text="#Sandbox_Tutorial_Movement" />
+					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_2" />
 					<Label class="TaskDesc" text="#Sandbox_Tutorial_Movement_desc" />
 					<Panel id="WASDTask" class="MovementRow topRow">
 						<Panel id="LaneTrainingStatus" class="TaskStatus" />
@@ -49,77 +60,40 @@
 						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_Reload" />
 						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_Reload" />
 					</Panel>
+					<Panel id="LightMeleeTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_LightMelee" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_LightMelee" />
+					</Panel>
+					<Panel id="HeavyMeleeTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_HeavyMelee" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_HeavyMelee" />
+					</Panel>
+					<Panel id="ParryTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_Parry" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_Parry" />
+					</Panel>
 					<Panel id="DashTask" class="MovementRow">
 						<Panel id="LaneTrainingStatus" class="TaskStatus" />
 						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_Dash" />
 						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_Dash" />
 					</Panel>
+					<Panel id="SlideTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_Slide" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_Slide" />
+					</Panel>
+					<Panel id="AirDashTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_AirDash" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_task_AirDash" />
+					</Panel>
 					<Panel id="MantleTask" class="MovementRow">
 						<Panel id="LaneTrainingStatus" class="TaskStatus" />
 						<Label class="Command" html="true" text="#Sandbox_Tutorial_Controls_Mantle_desc" />
 						<Label class="KeyboardShortcut" html="true" text="#Sandbox_Tutorial_Controls_Mantle" />
-					</Panel>
-				</Panel>
-			</Panel>
-			<Panel id="TutorialTask2A" class="NewPlayerTask">
-				<Panel class="NewPlayerHeader">
-					<Panel class="NewPlayerIcon" />
-					<Label class="NewPlayerTitle" text="#menu_hero_training" />
-				</Panel>
-				<Panel class="TaskText">
-					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_2" />
-					<Label class="TaskName" text="#Sandbox_Tutorial_Unlock_Abilities" />
-					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Unlock_Abilities_desc" />
-					<Panel class="Ability1 MovementRow topRow" id="Ability1Task">
-						<Label class="AbilityLearn" text="#Citadel_HUD_AbilityUnlock_Button" />
-						<Image id="Ability1Icon" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability1Name}" />
-					</Panel>
-					<Panel class="Ability2 MovementRow" id="Ability2Task">
-						<Label class="AbilityLearn" text="#Citadel_HUD_AbilityUnlock_Button" />
-						<Image id="Ability2Icon" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability2Name}" />
-					</Panel>
-					<Panel class="Ability3 MovementRow" id="Ability3Task">
-						<Label class="AbilityLearn" text="#Citadel_HUD_AbilityUnlock_Button" />
-						<Image id="Ability3Icon" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability3Name}" />
-					</Panel>
-					<Panel class="Ability4 MovementRow" id="Ability4Task">
-						<Label class="AbilityLearn" text="#Citadel_HUD_AbilityUnlock_Button" />
-						<Image id="Ability4Icon" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability4Name}" />
-					</Panel>
-				</Panel>
-			</Panel>
-			<Panel id="TutorialTask2" class="NewPlayerTask">
-				<Panel class="NewPlayerHeader">
-					<Panel class="NewPlayerIcon" />
-					<Label class="NewPlayerTitle" text="#menu_hero_training" />
-				</Panel>
-				<Panel class="TaskText">
-					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_3" />
-					<Label class="TaskName" html="true" text="#Sandbox_Tutorial_Abilities" />
-					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Abilities_desc" />
-					<Panel class="Ability1 MovementRow topRow" id="Ability1Task">
-						<Panel id="LaneTrainingStatus" class="TaskStatus" />
-						<Image id="Ability1Icon2" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability1Name2}" />
-					</Panel>
-					<Panel class="Ability2 MovementRow" id="Ability2Task">
-						<Panel id="LaneTrainingStatus" class="TaskStatus" />
-						<Image id="Ability2Icon2" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability2Name2}" />
-					</Panel>
-					<Panel class="Ability3 MovementRow" id="Ability3Task">
-						<Panel id="LaneTrainingStatus" class="TaskStatus" />
-						<Image id="Ability3Icon2" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability3Name2}" />
-					</Panel>
-					<Panel class="Ability4 MovementRow" id="Ability4Task">
-						<Panel id="LaneTrainingStatus" class="TaskStatus" />
-						<Image id="Ability4Icon2" class="AbilityIcon" />
-						<Label class="Command" text="{s:Ability4Name2}" />
 					</Panel>
 				</Panel>
 			</Panel>
@@ -129,9 +103,24 @@
 					<Label class="NewPlayerTitle" text="#menu_hero_training" />
 				</Panel>
 				<Panel class="TaskText">
-					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_4" />
-					<Label class="TaskName" text="#Sandbox_Tutorial_Upgrades" />
-					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Upgrades_desc" />
+					<Label class="TaskName" html="true" text="#Sandbox_Tutorial_Abilities" />
+					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_3" />
+					<Panel class="FeaturedAbility">
+						<Image id="Ability1Icon" class="AbilityIcon" />
+						<Label class="Command" text="{s:Ability1Name}" />
+					</Panel>
+					<Panel id="Ability1Learn" class="Ability1 MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="TaskHeader" html="true" text="#Sandbox_Tutorial_Abilities_Unlock_desc" />
+					</Panel>
+					<Panel id="Ability1Use" class="Ability1 MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="TaskHeader" html="true" text="#Sandbox_Tutorial_Abilities_Cast_desc" />
+					</Panel>
+					<Panel id="UpgradeTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="TaskHeader" html="true" text="#Sandbox_Tutorial_Abilities_Upgrade_desc" />
+					</Panel>
 				</Panel>
 			</Panel>
 			<Panel id="TutorialTask4" class="NewPlayerTask">
@@ -140,9 +129,19 @@
 					<Label class="NewPlayerTitle" text="#menu_hero_training" />
 				</Panel>
 				<Panel class="TaskText">
-					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_5" />
-					<Label class="TaskName" text="#Sandbox_Tutorial_Zipline" />
-					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Zipline_desc" />
+					<Label class="TaskName" text="#Sandbox_Tutorial_Ultimate" />
+					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_4" />
+					<Panel class="FeaturedAbility">
+						<Label class="Command" text="#Sandbox_Tutorial_UltimateAbility" />
+					</Panel>
+					<Panel id="UltimateTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_UltimateAbility_desc" />
+					</Panel>
+					<Panel id="KillTroopersTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Ultimate_desc" />
+					</Panel>
 				</Panel>
 			</Panel>
 			<Panel id="TutorialTask5" class="NewPlayerTask">
@@ -151,9 +150,21 @@
 					<Label class="NewPlayerTitle" text="#menu_hero_training" />
 				</Panel>
 				<Panel class="TaskText">
-					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_6" />
 					<Label class="TaskName" text="#Sandbox_Tutorial_Mods" />
+					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_5" />
 					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_Mods_desc" />
+				</Panel>
+				<Panel class="TaskText">
+					<Panel id="PurchaseModsTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_PurchaseMods" />
+					</Panel>
+				</Panel>
+				<Panel class="TaskText">
+					<Panel id="CloseShopTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_CloseShop" />
+					</Panel>
 				</Panel>
 			</Panel>
 			<Panel id="TutorialTask6" class="NewPlayerTask">
@@ -162,8 +173,15 @@
 					<Label class="NewPlayerTitle" text="#menu_hero_training" />
 				</Panel>
 				<Panel class="TaskText">
-					<Label class="TaskName" text="#Sandbox_Tutorial_Completed" />
-					<Label class="TaskDesc" text="#Sandbox_Tutorial_Completed_desc" />
+					<Label class="TaskName" text="#Sandbox_Tutorial_DestroyGuardian" />
+					<Label class="TaskNumber" text="#Sandbox_Tutorial_Step_6" />
+					<Label class="TaskDesc" html="true" text="#Sandbox_Tutorial_DestroyGuardian_desc" />
+				</Panel>
+				<Panel class="TaskText">
+					<Panel id="DestroyGuardianTask" class="MovementRow">
+						<Panel id="LaneTrainingStatus" class="TaskStatus" />
+						<Label class="Command" text="#Sandbox_Tutorial_Controls_DestroyGuardian" />
+					</Panel>
 				</Panel>
 			</Panel>
 		</Panel>
@@ -173,12 +191,7 @@
 			</Panel>
 			<Label class="introText" html="true" text="#HeroTraining_Outro_Desc" />
 			<Panel class="OutroNavigation">
-				<Panel id="StartButton" class="InitialPresentationButton" onactivate="CitadelTutorialSandboxFinish()">
-					<Label class="buttonText" text="#HeroTraining_Outro_Button" />
-				</Panel>
-				<Panel id="ContinueButton" class="InitialPresentationButton" onactivate="CitadelTutorialSandboxContinue()">
-					<Label class="buttonText" text="#HeroTraining_Continue_Button" />
-				</Panel>
+				<CitadelButton id="StartButton" class="InitialPresentationButton Large" text="#HeroTraining_Outro_Button" onactivate="CitadelTutorialSandboxFinish()" />
 			</Panel>
 		</Panel>
 	</Panel>
