--- a/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_bookworm.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_bookworm.css
@@ -1,16 +1,21 @@
 /* Prettified by Source 2 Viewer - https://valveresourceformat.github.io */
 
 @import url("s2r://panorama/styles/citadel_base_styles.vcss_c");
-@keyframes 'Combo1'
+@keyframes 'DefaultAnim'
 {
 	0%
 	{
-		transform: rotateZ( 0deg ) translate3d( 0px, 0px, 0px );
+		transform: translateX( 1px );
+	}
+	
+	50%
+	{
+		transform: translateY( 1px );
 	}
 	
 	100%
 	{
-		transform: rotateZ( -5deg ) translate3d( 0px, 0px, 50px );
+		transform: translateX( -1px );
 	}
 	
 }
@@ -27,50 +32,40 @@
 
 .ModifierProgressBar
 {
-	background-color: krillColor;
+	background-color: bookwormColor;
 }
 
-.SplitLabelProgressBar
+.BarAndNameContainer
 {
-	ui-scale: 180%;
+	visibility: collapse;
+}
+
+.AbilityNameLabel
+{
+	visibility: collapse;
 }
 
 .SplitLabelProgressBar .SplitLabelName Image
 {
-	animation-name: Combo1;
-	animation-duration: 0.2s;
+	animation-name: DefaultAnim;
+	animation-duration: 0.4s;
 	animation-iteration-count: infinite;
-	animation-direction: alternate-reverse;
-	animation-frame-time: 200ms;
+	animation-direction: alternate;
+	animation-frame-time: 300ms;
 }
 
-.SplitLabelProgressBar .SplitLabelName Image:nth-child(5n)
+.SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
 {
 	animation-direction: alternate-reverse;
 }
 
-.SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+1)
+.SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
 {
 	animation-direction: alternate;
-}
-
-.SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+2)
-{
-	animation-direction: alternate-reverse;
-}
-
-.SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+3)
-{
-	animation-direction: alternate;
-}
-
-.SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+4)
-{
-	animation-direction: alternate-reverse;
 }
 
 .SplitLabelProgressBar .SplitLabelProgress
 {
-	wash-color: krillColor;
+	wash-color: bookwormColor;
 }
 
