--- a/game/citadel/pak01_dir/panorama/styles/hud_ability_modifier_shared.css
+++ b/game/citadel/pak01_dir/panorama/styles/hud_ability_modifier_shared.css
@@ -1,5 +1,73 @@
 /* Prettified by Source 2 Viewer - https://valveresourceformat.github.io */
 
+@keyframes 'SilenceAnim'
+{
+	0%
+	{
+		transform: translateX( 1px );
+	}
+	
+	50%
+	{
+		transform: translateY( 1px );
+	}
+	
+	100%
+	{
+		transform: translateX( -1px );
+	}
+	
+}
+
+.silence #fancy_progress_container,.MODIFIER_STATE_SILENCED #fancy_progress_container,.MODIFIER_STATE_MUTED #fancy_progress_container
+{
+	visibility: visible;
+}
+
+.silence #basic_progress_container,.MODIFIER_STATE_SILENCED #basic_progress_container,.MODIFIER_STATE_MUTED #basic_progress_container
+{
+	visibility: collapse;
+}
+
+.silence .ModifierProgressBarContainer,.MODIFIER_STATE_SILENCED .ModifierProgressBarContainer,.MODIFIER_STATE_MUTED .ModifierProgressBarContainer
+{
+	visibility: collapse;
+}
+
+.silence .ModifierProgressBar,.MODIFIER_STATE_SILENCED .ModifierProgressBar,.MODIFIER_STATE_MUTED .ModifierProgressBar
+{
+	background-color: spiritColor;
+}
+
+.silence .SplitLabelProgressBar,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar,.MODIFIER_STATE_MUTED .SplitLabelProgressBar
+{
+	visibility: visible;
+}
+
+.silence .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image
+{
+	animation-name: SilenceAnim;
+	animation-duration: 0.4s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-frame-time: 300ms;
+}
+
+.silence .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd),.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd),.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
+{
+	animation-direction: alternate-reverse;
+}
+
+.silence .SplitLabelProgressBar .SplitLabelName Image:nth-child(even),.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image:nth-child(even),.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
+{
+	animation-direction: alternate;
+}
+
+.silence .SplitLabelProgressBar .SplitLabelProgress,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelProgress,.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelProgress
+{
+	wash-color: spiritColor;
+}
+
 @keyframes 'StunAnim'
 {
 	0%
@@ -42,7 +110,6 @@
 .stunned .SplitLabelProgressBar,.MODIFIER_STATE_COMMAND_RESTRICTED .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 180%;
 }
 
 .stunned .SplitLabelProgressBar .SplitLabelName Label,.MODIFIER_STATE_COMMAND_RESTRICTED .SplitLabelProgressBar .SplitLabelName Label
@@ -76,12 +143,12 @@
 
 .stunned.dynamo2 .SplitLabelProgressBar,.MODIFIER_STATE_COMMAND_RESTRICTED.dynamo2 .SplitLabelProgressBar
 {
-	ui-scale: 140%;
+	ui-scale: 100%;
 }
 
 .stunned.dynamo2 .BarAndNameContainer,.MODIFIER_STATE_COMMAND_RESTRICTED.dynamo2 .BarAndNameContainer
 {
-	visibility: collapse;
+	visibility: visible;
 }
 
 @keyframes 'DisarmAnim'
@@ -126,7 +193,6 @@
 .disarm_proc .SplitLabelProgressBar,.MODIFIER_STATE_DISARMED .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
 .disarm_proc .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_DISARMED .SplitLabelProgressBar .SplitLabelName Image
@@ -172,33 +238,32 @@
 	
 }
 
-.sleep_proc #fancy_progress_container
+.sleep_proc #fancy_progress_container,.MODIFIER_STATE_IS_ASLEEP #fancy_progress_container
 {
 	visibility: visible;
 }
 
-.sleep_proc #basic_progress_container
+.sleep_proc #basic_progress_container,.MODIFIER_STATE_IS_ASLEEP #basic_progress_container
 {
 	visibility: collapse;
 }
 
-.sleep_proc .ModifierProgressBarContainer
+.sleep_proc .ModifierProgressBarContainer,.MODIFIER_STATE_IS_ASLEEP .ModifierProgressBarContainer
 {
 	visibility: collapse;
 }
 
-.sleep_proc .ModifierProgressBar
+.sleep_proc .ModifierProgressBar,.MODIFIER_STATE_IS_ASLEEP .ModifierProgressBar
 {
 	background-color: slategray;
 }
 
-.sleep_proc .SplitLabelProgressBar
+.sleep_proc .SplitLabelProgressBar,.MODIFIER_STATE_IS_ASLEEP .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
-.sleep_proc .SplitLabelProgressBar .SplitLabelName Image
+.sleep_proc .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_IS_ASLEEP .SplitLabelProgressBar .SplitLabelName Image
 {
 	animation-name: SleepAnim;
 	animation-duration: 0.4s;
@@ -207,17 +272,17 @@
 	animation-frame-time: 300ms;
 }
 
-.sleep_proc .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
+.sleep_proc .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd),.MODIFIER_STATE_IS_ASLEEP .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
 {
 	animation-direction: alternate-reverse;
 }
 
-.sleep_proc .SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
+.sleep_proc .SplitLabelProgressBar .SplitLabelName Image:nth-child(even),.MODIFIER_STATE_IS_ASLEEP .SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
 {
 	animation-direction: alternate;
 }
 
-.sleep_proc .SplitLabelProgressBar .SplitLabelProgress
+.sleep_proc .SplitLabelProgressBar .SplitLabelProgress,.MODIFIER_STATE_IS_ASLEEP .SplitLabelProgressBar .SplitLabelProgress
 {
 	wash-color: slategray;
 }
@@ -264,7 +329,6 @@
 .immobilize_proc .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
 .immobilize_proc .SplitLabelProgressBar .SplitLabelName Image
@@ -289,75 +353,6 @@
 .immobilize_proc .SplitLabelProgressBar .SplitLabelProgress
 {
 	wash-color: #349c4c;
-}
-
-@keyframes 'SilenceAnim'
-{
-	0%
-	{
-		transform: translateX( 1px );
-	}
-	
-	50%
-	{
-		transform: translateY( 1px );
-	}
-	
-	100%
-	{
-		transform: translateX( -1px );
-	}
-	
-}
-
-.silence #fancy_progress_container,.MODIFIER_STATE_SILENCED #fancy_progress_container,.MODIFIER_STATE_MUTED #fancy_progress_container
-{
-	visibility: visible;
-}
-
-.silence #basic_progress_container,.MODIFIER_STATE_SILENCED #basic_progress_container,.MODIFIER_STATE_MUTED #basic_progress_container
-{
-	visibility: collapse;
-}
-
-.silence .ModifierProgressBarContainer,.MODIFIER_STATE_SILENCED .ModifierProgressBarContainer,.MODIFIER_STATE_MUTED .ModifierProgressBarContainer
-{
-	visibility: collapse;
-}
-
-.silence .ModifierProgressBar,.MODIFIER_STATE_SILENCED .ModifierProgressBar,.MODIFIER_STATE_MUTED .ModifierProgressBar
-{
-	background-color: spiritColor;
-}
-
-.silence .SplitLabelProgressBar,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar,.MODIFIER_STATE_MUTED .SplitLabelProgressBar
-{
-	visibility: visible;
-	ui-scale: 160%;
-}
-
-.silence .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image
-{
-	animation-name: SilenceAnim;
-	animation-duration: 0.4s;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-frame-time: 300ms;
-}
-
-.silence .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd),.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd),.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
-{
-	animation-direction: alternate-reverse;
-}
-
-.silence .SplitLabelProgressBar .SplitLabelName Image:nth-child(even),.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelName Image:nth-child(even),.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
-{
-	animation-direction: alternate;
-}
-
-.silence .SplitLabelProgressBar .SplitLabelProgress,.MODIFIER_STATE_SILENCED .SplitLabelProgressBar .SplitLabelProgress,.MODIFIER_STATE_MUTED .SplitLabelProgressBar .SplitLabelProgress
-{
-	wash-color: spiritColor;
 }
 
 @keyframes 'TetherAnim'
@@ -402,7 +397,6 @@
 .tether_proc .SplitLabelProgressBar,.MODIFIER_STATE_PUNKGOAT_TETHERED .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
 .tether_proc .SplitLabelProgressBar .SplitLabelName Image,.MODIFIER_STATE_PUNKGOAT_TETHERED .SplitLabelProgressBar .SplitLabelName Image
@@ -471,7 +465,6 @@
 .viper_petrify .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
 .viper_petrify .SplitLabelProgressBar .SplitLabelName Image
@@ -544,14 +537,12 @@ CitadelHudModifiers_Entry.MODIFIER_STATE_HOLDING_IDOL .ModifierProgressBarContai
 
 CitadelHudModifiers_Entry.MODIFIER_STATE_HOLDING_IDOL .ModifierProgressBar
 {
-	background-color: colorEnemy;
-	background-color: green;
+	background-color: shardColor;
 }
 
 CitadelHudModifiers_Entry.MODIFIER_STATE_HOLDING_IDOL .SplitLabelProgressBar
 {
 	visibility: visible;
-	ui-scale: 160%;
 }
 
 CitadelHudModifiers_Entry.MODIFIER_STATE_HOLDING_IDOL .SplitLabelProgressBar .SplitLabelName Label
